<resources>
    <string name="app_name">QuanLySach_DuAnMau</string>
    <string name="title_activity_login">Đăng Nhập</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Tên đăng nhập</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="button_login">"Đăng Nhập"</string>
    <string name="button_back">"Thoát"</string>
    <string name="title_welcome_screen">Ứng Dụng Quản Lý Sách</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
