<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/poly_logo"
                android:layout_width="match_parent"
                android:layout_height="150dp" />

        </LinearLayout>

        <TextView
            android:fontFamily="@font/windsorb"
            android:layout_marginBottom="10dp"
            android:textSize="24dp"
            android:textAlignment="center"
            android:text="@string/title_activity_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtUser"
                    android:textSize="18sp"
                    android:hint="@string/prompt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edtPass"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:hint="@string/prompt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:layout_gravity="right"
                android:text="Nhớ tài khoản"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="14sp"
                android:layout_gravity="right"
                android:textColor="#0000cc"
                android:text="Quên mật khẩu?"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:layout_gravity="right"
                android:textColor="#0000cc"
                android:text="Đăng ký"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_margin="5dp"
                android:id="@+id/btnBack"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/button_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:onClick="passToMainActivity"
                android:id="@+id/btnLogin"
                android:layout_margin="5dp"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>